--- a/centre/frontend/index.html
+++ b/centre/frontend/index.html
@@ -15,64 +15,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Shadeless</title>
-  <style>
-    :root {
-      --component-width: 85%;
-      --component-distance: 2vh;
-      --component-border: 10px;
-
-      font-size: 16px;
-      line-height: 24px;
-      font-weight: 400;
-
-      min-height:100%;
-      position:relative;
-
-      color-scheme: light dark;
-      background-color: #242424;
-
-      text-rendering: optimizeLegibility;
-      -webkit-font-smoothing: antialiased;
-      -moz-osx-font-smoothing: grayscale;
-      -webkit-text-size-adjust: 100%;
-    }
-
-    html,
-    body {
-      background-color: var(--bg-grey) !important;
-    }
-
-    body {
-      display: flex;
-      flex-direction: column;
-    }
-
-    :root {
-      flex: 1 0 auto;
-    }
-
-    footer {
-      flex-shrink: 0;
-    }
-
-    @media (prefers-color-scheme: light) {
-      :root {
-        color: #213547;
-        background-color: #ffffff;
-      }
-      button {
-        background-color: #f9f9f9;
-      }
-    }
-
-    @keyframes newAddedRow {
-      0% {
-        background-color: black;
-        color: red;
-      }
-      40% {}
-    }
-  </style>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Sen&display=swap" rel="stylesheet">
 </head>
 <body>
   <script src="/sdk.js">
